--- a/index.html
+++ b/index.html
@@ -45,8 +45,11 @@
       document.getElementById('timer').innerHTML = 'School is over!';
     } else {
       const days = Math.floor(timeDifference / (1000 * 60 * 60 * 24));
+      const hours = Math.floor((timeDifference % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
+      const minutes = Math.floor((timeDifference % (1000 * 60 * 60)) / (1000 * 60));
+      const seconds = Math.floor((timeDifference % (1000 * 60)) / 1000);
 
-      document.getElementById('timer').innerHTML = `${days} days`;
+      document.getElementById('timer').innerHTML = `${days} days ${hours} hours ${minutes} minutes ${seconds} seconds`;
     }
   }
 </script>
